# sloprock-plus

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.plugin-builder  README.md  VERSION  docker-compose.nas.yml  docker-compose.yml  package-lock.json
.github/workflows/: build-push.yml  pr-check.yml  release.yml  sync-version.yml  sync-wiki.yml  tests.yml
backend/: .env.example  Dockerfile  docker-entrypoint.sh  package-lock.json  package.json  tsconfig.json  vitest.config.ts
backend/prisma/: schema.prisma
backend/scripts/: build-plugins.mjs
backend/src/: config.ts  container.ts  index.ts  server.ts  tokens.ts
docs/: sloppak-spec.md
docs/wiki/: README.md  api-reference.md  architecture.md  authentication.md  database-schema.md  format-provider-guide.md  library.md  player.md  plugin-api-reference.md  plugin-chain-vst.md  plugin-development-guide.md  plugin-hooks-slots-reference.md  plugin-system-overview.md  sloppak-format.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts
frontend/docker-entrypoint.d/: 20-resolve-backend.sh
frontend/src/: App.vue  main.ts
plugins/format_gp/: client.js  index.js  package-lock.json  package.json  plugin.json
plugins/format_loose/: index.js  plugin.json
plugins/format_sloppak/: index.js  plugin.json
plugins/pitch_yin/wasm/: CMakeLists.txt  build.sh
plugins/pitch_yin/wasm/include/: yin.hpp
plugins/pitch_yin/wasm/src/: wasm_api.cpp
(+258 files in other folders)
